--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -465,3 +465,77 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.money-controls__forms-container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 600px;
+  margin: auto;
+}
+
+.deposit-input,
+.withdraw-input {
+  width: 100px;
+}
+
+.balance {
+  text-align: center;
+}
+
+/* GAME */
+
+.game-wrapper {
+  padding: 40px;
+  background-color: #bbdefb;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.card {
+  width: 220px;
+  height: 315px;
+  position: relative;
+  perspective: 1000px;
+}
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 1s;
+  backface-visibility: hidden;
+  border-radius: 10px;
+}
+.front {
+  background-image: url("../images/card.png");
+  background-size: cover;
+}
+.back {
+  background-color: #bdbdbd;
+  transform: rotateY(180deg);
+}
+.card.active .front {
+  transform: rotateY(180deg);
+}
+.card.active .back {
+  transform: rotateY(360deg);
+}
+
+.button-play {
+  border: none;
+  /* background-color: ; */
+}
+
+/* MEDIA */
+
+@media only screen and (max-width: 500px) {
+  .money-controls__forms-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
